@@ -15,6 +15,7 @@ CVS HEAD (2007-04-03):
   Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
 * Fixed adding to the recent file list getting confused by changes to the list
   from other KTIGCC instances.
+* Fixed the wrong recent file getting opened when opening triggers save prompt.
 
 
 KTIGCC 1.06 (2006-11-25):
