@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS ktigcc-1-branch (2007-04-03):
+KTIGCC 1.07 (2007-04-03):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
@@ -14,6 +14,7 @@ CVS ktigcc-1-branch (2007-04-03):
   Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
 * Fixed adding to the recent file list getting confused by changes to the list
   from other KTIGCC instances.
+* Fixed the wrong recent file getting opened when opening triggers save prompt.
 
 
 KTIGCC 1.06 (2006-11-25):
